<resources>
    <string name="app_name">Pomodoro</string>
    <string name="default_time_display">00:00:00</string>
    <string name="startButtonText">Start</string>
    <string name="angi_antall_repetisjoner">Angi antall repetisjoner: </string>
    <string name="textPause">Angi lengde for pauser: </string>
    <string name="textWork">Angi lengde for arbeidstid: </string>
    <string name="textTimePause">Gjenværende tid av pause: </string>
    <string name="textTimeWork">Gjenværende tid av arbeid: </string>
</resources>